--- a/frontend/admin-dioxus/assets/tailwind.css
+++ b/frontend/admin-dioxus/assets/tailwind.css
@@ -2940,6 +2940,16 @@
       }
     }
   }
+  .hover\:bg-accent\/50 {
+    &:hover {
+      @media (hover: hover) {
+        background-color: var(--accent);
+        @supports (color: color-mix(in lab, red, red)) {
+          background-color: color-mix(in oklab, var(--accent) 50%, transparent);
+        }
+      }
+    }
+  }
   .hover\:bg-background {
     &:hover {
       @media (hover: hover) {
