--- a/frontend/consumer-dioxus/assets/tailwind.css
+++ b/frontend/consumer-dioxus/assets/tailwind.css
@@ -241,6 +241,9 @@
   .pointer-events-none {
     pointer-events: none;
   }
+  .invisible {
+    visibility: hidden;
+  }
   .visible {
     visibility: visible;
   }
