--- a/frontend/consumer-dioxus/assets/tailwind.css
+++ b/frontend/consumer-dioxus/assets/tailwind.css
@@ -2437,6 +2437,24 @@
   .text-foreground {
     color: var(--foreground);
   }
+  .text-foreground\/30 {
+    color: var(--foreground);
+    @supports (color: color-mix(in lab, red, red)) {
+      color: color-mix(in oklab, var(--foreground) 30%, transparent);
+    }
+  }
+  .text-foreground\/50 {
+    color: var(--foreground);
+    @supports (color: color-mix(in lab, red, red)) {
+      color: color-mix(in oklab, var(--foreground) 50%, transparent);
+    }
+  }
+  .text-foreground\/70 {
+    color: var(--foreground);
+    @supports (color: color-mix(in lab, red, red)) {
+      color: color-mix(in oklab, var(--foreground) 70%, transparent);
+    }
+  }
   .text-foreground\/80 {
     color: var(--foreground);
     @supports (color: color-mix(in lab, red, red)) {
