Update footer with X icon and new credits

--- a/frontend/consumer-dioxus/assets/tailwind.css
+++ b/frontend/consumer-dioxus/assets/tailwind.css
@@ -1147,6 +1147,10 @@
     width: calc(0.25rem * 5);
     height: calc(0.25rem * 5);
   }
+  .size-6 {
+    width: calc(0.25rem * 6);
+    height: calc(0.25rem * 6);
+  }
   .size-8 {
     width: calc(0.25rem * 8);
     height: calc(0.25rem * 8);
